# it45-project

./: .gitignore  CMakeLists.txt  README.md  graph-path.py  log.csv  main.c
Instances/with-pos/: Coordinates.csv  Distances.csv  Missions.csv
bench/: main.c  prelude.c
report/: Analyse_Conception.tex  Rapport.tex  final.tex  initial.tex  it45-project_presentation.odp  notes.md
report/Images/: .$Flowchart_recuit.drawio.bkp  .~lock.log.ods#  3d_plot.py  Flowchart_recuit.drawio  log.ods
src/: constraints.c  constraints.h  defs.h  initial.c  initial.h  load.c  load.h  main.c  optimize.c  optimize.h  score.c  score.h  utils.c  utils.h  visualisation.c  visualisation.h
test/: common.c  initial.c  load.c  main.c  optimize.c  utils.c
